// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultItemApr Boosted Vaults displays APR breakdown on hover 1`] = `
<div>
  <p
    aria-describedby="Curve.fi renBTC/wBTC/sBTC apr breakdown"
    class="MuiTypography-root-14 makeStyles-apr-1 MuiTypography-body1-16 MuiTypography-colorTextPrimary-39"
  >
    10.00%
  </p>
  <div
    class="MuiTooltip-popper-3 MuiTooltip-popperArrow-5"
    id="Curve.fi renBTC/wBTC/sBTC apr breakdown"
    role="tooltip"
    style="position: absolute; transform: translate3d(NaNpx, NaNpx, 0); top: 0px; left: 0px; will-change: transform;"
    x-placement="left"
  >
    <div
      class="MuiTooltip-tooltip-6 MuiTooltip-tooltipPlacementLeft-10 MuiTooltip-tooltipArrow-7"
      style="opacity: 1; transform: none; transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div>
        0.00% Vault Compounding
      </div>
      <div>
        0.00% Curve LP Fees
      </div>
      <span
        class="MuiTooltip-arrow-8"
      />
    </div>
  </div>
</div>
`;

exports[`VaultItemApr Boosted Vaults displays correct APR and boost information 1`] = `
<div>
  <p
    class="MuiTypography-root-14 makeStyles-apr-1 MuiTypography-body1-16 MuiTypography-colorTextPrimary-39"
  >
    10.00%
  </p>
</div>
`;

exports[`VaultItemApr No APR Vaults renders zero APR 1`] = `
<div>
  <p
    class="MuiTypography-root-3 makeStyles-apr-1 MuiTypography-body1-5 MuiTypography-colorTextPrimary-28"
  >
    0%
  </p>
</div>
`;

exports[`VaultItemApr Non-Boosted Vaults displays APR breakdown on hover 1`] = `
<div>
  <p
    aria-describedby="Badger apr breakdown"
    class="MuiTypography-root-14 makeStyles-apr-1 MuiTypography-body1-16 MuiTypography-colorTextPrimary-39"
  >
    8.17%
  </p>
  <div
    class="MuiTooltip-popper-3 MuiTooltip-popperArrow-5"
    id="Badger apr breakdown"
    role="tooltip"
    style="position: absolute; transform: translate3d(NaNpx, NaNpx, 0); top: 0px; left: 0px; will-change: transform;"
    x-placement="left"
  >
    <div
      class="MuiTooltip-tooltip-6 MuiTooltip-tooltipPlacementLeft-10 MuiTooltip-tooltipArrow-7"
      style="opacity: 1; transform: none; transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div>
        8.17% Vault Compounding
      </div>
      <span
        class="MuiTooltip-arrow-8"
      />
    </div>
  </div>
</div>
`;

exports[`VaultItemApr Non-Boosted Vaults displays correct APR and boost information 1`] = `
<div>
  <p
    class="MuiTypography-root-14 makeStyles-apr-1 MuiTypography-body1-16 MuiTypography-colorTextPrimary-39"
  >
    8.17%
  </p>
</div>
`;
